digitals fis added

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -527,13 +527,121 @@ input[type='radio'].visually-hidden {
 .lead-singer-item {
   position: relative;
 }
-.lead-singer-wrapper{
-  position: relative;
-}
 
-.lead-singer-item::after{
+.digital_one::after{
   display: block;
   content: "01";
+  position: absolute;
+  bottom: -13%;
+  right:  -24%;
+  transform: translate(-50%, -50%);
+  background-color: transparent;
+  height: 136px;
+  width: 136px;
+  font-size: 90px;
+  font-family: "OpenSans";
+  color: rgba(0, 0, 0, 0.169);
+  font-weight: bold;
+  text-transform: uppercase;
+  line-height: 1.734;
+  text-align: center;
+}
+
+.digital_two::after{
+  display: block;
+  content: "02";
+  position: absolute;
+  bottom: -13%;
+  right:  -24%;
+  transform: translate(-50%, -50%);
+  background-color: transparent;
+  height: 136px;
+  width: 136px;
+  font-size: 90px;
+  font-family: "OpenSans";
+  color: rgba(0, 0, 0, 0.169);
+  font-weight: bold;
+  text-transform: uppercase;
+  line-height: 1.734;
+  text-align: center;
+}
+
+.digital_two::after{
+  display: block;
+  content: "02";
+  position: absolute;
+  bottom: -13%;
+  right:  -24%;
+  transform: translate(-50%, -50%);
+  background-color: transparent;
+  height: 136px;
+  width: 136px;
+  font-size: 90px;
+  font-family: "OpenSans";
+  color: rgba(0, 0, 0, 0.169);
+  font-weight: bold;
+  text-transform: uppercase;
+  line-height: 1.734;
+  text-align: center;
+}
+
+.digital_three::after{
+  display: block;
+  content: "03";
+  position: absolute;
+  bottom: -13%;
+  right:  -24%;
+  transform: translate(-50%, -50%);
+  background-color: transparent;
+  height: 136px;
+  width: 136px;
+  font-size: 90px;
+  font-family: "OpenSans";
+  color: rgba(0, 0, 0, 0.169);
+  font-weight: bold;
+  text-transform: uppercase;
+  line-height: 1.734;
+  text-align: center;
+}
+.digital_four::after{
+  display: block;
+  content: "04";
+  position: absolute;
+  bottom: -13%;
+  right:  -24%;
+  transform: translate(-50%, -50%);
+  background-color: transparent;
+  height: 136px;
+  width: 136px;
+  font-size: 90px;
+  font-family: "OpenSans";
+  color: rgba(0, 0, 0, 0.169);
+  font-weight: bold;
+  text-transform: uppercase;
+  line-height: 1.734;
+  text-align: center;
+}
+.digital_five::after{
+  display: block;
+  content: "05";
+  position: absolute;
+  bottom: -13%;
+  right:  -24%;
+  transform: translate(-50%, -50%);
+  background-color: transparent;
+  height: 136px;
+  width: 136px;
+  font-size: 90px;
+  font-family: "OpenSans";
+  color: rgba(0, 0, 0, 0.169);
+  font-weight: bold;
+  text-transform: uppercase;
+  line-height: 1.734;
+  text-align: center;
+}
+.digital_six::after{
+  display: block;
+  content: "06";
   position: absolute;
   bottom: -28%;
   right:  -24%;
@@ -549,7 +657,6 @@ input[type='radio'].visually-hidden {
   line-height: 1.734;
   text-align: center;
 }
-  
 
 .lead-singer-wrapper {
   position: absolute;
@@ -590,7 +697,7 @@ input[type='radio'].visually-hidden {
 }
 
 .lead-singer-item:not(:last-child) {
-  margin-bottom: 54px;
+  padding-bottom: 54px;
 }
 
 .lead-singer-album::before {
