--- a/src/css/style.css
+++ b/src/css/style.css
@@ -77,7 +77,7 @@ input[type='radio'].visually-hidden {
 
 .header-main {
   position: relative;
-  background: url(../img/header.png) center no-repeat;
+  background: url(../img/header.png) 45% 50% no-repeat;
   background-size: cover;
   width: 100%;
   margin: 0 auto;
@@ -144,7 +144,7 @@ input[type='radio'].visually-hidden {
   left: 50%;
   transform: translate(-50%, -50%);
   background: url(../img/logo.png) center no-repeat;
-  background-size: cover;
+  background-size: contain;
 }
 
 /* DISCOGRAPHY */
@@ -159,8 +159,8 @@ input[type='radio'].visually-hidden {
 .title-h2 {
   text-align: center;
   position: relative;
-  font-size: 4.6rem;
-  width: max-content;
+  font-size: 2.6rem;
+  /* width: max-content; */
   margin: 0 auto;
   text-transform: uppercase;
   font-weight: 400;
@@ -185,7 +185,6 @@ input[type='radio'].visually-hidden {
 }
 
 .discography-about {
-
   padding: 0 1rem;
   text-align: center;
   font-family: 'Open Sans', sans-serif;
@@ -196,7 +195,6 @@ input[type='radio'].visually-hidden {
 .disco-list {
   margin-top: 10.4rem;
   padding-bottom: 43rem;
-
 }
 
 .disco-list-item {
@@ -477,6 +475,8 @@ input[type='radio'].visually-hidden {
   transform: rotate(35deg) scaley(0.5);
 }
 
+/* LEAD SINGER START */
+
 .lead-singer-about {
   font-size: 1.7rem;
   font-family: 'Open Sans', sans-serif;
@@ -519,7 +519,7 @@ input[type='radio'].visually-hidden {
 .lead-singer-songs {
   position: relative;
   margin: 0 auto;
-  width: 384px;
+  max-width: 38.4rem;
   font-family: 'Open Sans', sans-serif;
   text-transform: uppercase;
 }
@@ -527,62 +527,61 @@ input[type='radio'].visually-hidden {
 .lead-singer-item {
   position: relative;
 }
-.lead-singer-wrapper{
+.lead-singer-wrapper {
   position: relative;
 }
 
-.lead-singer-item::after{
+.lead-singer-item::after {
   display: block;
-  content: "01";
+  content: '01';
   position: absolute;
-  bottom: -28%;
-  right:  -24%;
+  bottom: -15%;
+  right: -16%;
   transform: translate(-50%, -50%);
   background-color: transparent;
-  height: 136px;
-  width: 136px;
-  font-size: 90px;
-  font-family: "OpenSans";
+  height: 10rem;
+  width: 10rem;
+  font-size: 9rem;
+  font-family: 'OpenSans';
   color: rgba(0, 0, 0, 0.169);
   font-weight: bold;
   text-transform: uppercase;
-  line-height: 1.734;
+  line-height: 1.434;
   text-align: center;
 }
-  
 
 .lead-singer-wrapper {
   position: absolute;
   top: 7%;
-  left: 12%;
-  width: 308px;
+  /* left: 12%; */
+  width: 30.8rem;
 }
 
 .lead-singer-date {
-  font-size: 14px;
+  font-size: 1.4rem;
   line-height: 1.734;
   font-weight: bold;
 }
 
 .lead-singer-album {
-  font-size: 15px;
+  font-size: 1.5rem;
   color: rgb(255, 255, 255);
   line-height: 1.618;
   font-weight: bold;
-  padding-top: 4px;
-  padding-bottom: 38px;
+  padding-top: 0.4rem;
+  padding-bottom: 3.8rem;
 }
 
 .lead-singer-album-title {
-  font-size: 23px;
+  font-size: 2.3rem;
   color: rgb(0, 0, 0);
   line-height: 1.055;
   text-transform: none;
-  padding-bottom: 30px;
+  padding-bottom: 3rem;
 }
 
 .lead-singer-album-text {
-  font-size: 15px;
+  font-size: 1.5rem;
   font-family: 'Open Sans';
   color: rgb(122, 128, 131);
   line-height: 1.618;
@@ -590,43 +589,46 @@ input[type='radio'].visually-hidden {
 }
 
 .lead-singer-item:not(:last-child) {
-  margin-bottom: 54px;
+  margin-bottom: 5.4rem;
 }
 
 .lead-singer-album::before {
   display: block;
   content: '';
-  height: 1px;
-  width: 314px;
+  height: 0.1rem;
+  width: 30.4rem;
   background-color: #000002;
 }
+
+/* UPCOMING START */
 
 .upcoming {
   margin: 0 auto;
   background: url(../img/upcoming.jpg) center bottom no-repeat;
   background-size: cover;
-  width: 750px;
-  margin-bottom: 79px;
+  max-width: 75rem;
+  margin-bottom: 7.9rem;
 }
 
 .upcoming-head {
   margin: 0 auto;
   padding: 0;
-  margin-left: 152px;
-  font-size: 15px;
+  padding-right: 0.5rem;
+  margin-left: 8.2rem;
+  font-size: 1.5rem;
   line-height: 1.618;
-  width: 545px;
+  max-width: 54.5rem;
 }
 
 .upcoming-title {
-  font-size: 50.49px;
+  font-size: 3.5rem;
   color: rgb(66, 113, 126);
   text-transform: uppercase;
   position: relative;
   line-height: 1.174;
-  padding-top: 40px;
-  letter-spacing: 6px;
-  padding-bottom: 100px;
+  padding-top: 4rem;
+  letter-spacing: 0.6rem;
+  padding-bottom: 10rem;
 }
 
 .upcoming-title:before {
@@ -634,33 +636,33 @@ input[type='radio'].visually-hidden {
   position: absolute;
   top: 35%;
   left: -3%;
-  height: 1px;
-  width: 504px;
+  height: 0.1rem;
+  max-width: 50.4rem;
   background-color: #000002;
 }
 
 .upcoming-item {
-  font-size: 26px;
+  font-size: 2.6rem;
   line-height: 1.055;
-  letter-spacing: 2px;
-  padding-bottom: 18px;
+  letter-spacing: 0.2rem;
+  padding-bottom: 1.8rem;
 }
 
 .upcoming-item:after {
   display: block;
   content: '';
   position: absolute;
-  width: 126px;
-  height: 1px;
+  width: 12.6rem;
+  height: 0.1rem;
   background-color: #000002;
-  margin-top: 8px;
+  margin-top: 0.8rem;
 }
 
 .upcoming-adress {
   color: rgb(122, 128, 131);
-  padding-bottom: 73px;
+  padding-bottom: 7.3rem;
   font-weight: bold;
-  letter-spacing: 2px;
+  letter-spacing: 0.2rem;
   position: relative;
 }
 
@@ -668,123 +670,126 @@ input[type='radio'].visually-hidden {
   display: block;
   content: '';
   position: absolute;
-  width: 1px;
-  height: 51px;
+  width: 0.1rem;
+  height: 5.1rem;
   background-color: #000002;
-  margin: 16px 28px;
+  margin: 1.6rem 2.8rem;
 }
 
 .upcoming-date {
   font-weight: bold;
-  letter-spacing: 2px;
+  letter-spacing: 0.2rem;
   text-transform: uppercase;
-  padding-bottom: 203px;
+  padding-bottom: 20.3rem;
 }
 
 .upcoming-date:after {
   display: block;
   content: '';
   position: absolute;
-  width: 1px;
-  height: 165px;
+  width: 0.1rem;
+  height: 16.5rem;
   background-color: #000002;
-  margin: 18px 28px;
+  margin: 1.8rem 2.8rem;
 }
 
 .upcoming-descr {
   font-family: 'OpenSans';
   color: rgb(122, 128, 131);
-  padding-top: 14px;
-  padding-bottom: 74px;
+  padding-top: 1.4rem;
+  padding-bottom: 7.4rem;
   font-weight: bold;
 }
 
 .upcoming-date-next {
   font-weight: bold;
   text-transform: uppercase;
-  letter-spacing: 2px;
-  padding-bottom: 292px;
+  letter-spacing: 0.2rem;
+  padding-bottom: 29.2rem;
 }
 
 .upcoming-date-next:before {
   display: block;
   content: '';
   position: absolute;
-  width: 1px;
-  height: 51px;
+  width: 0.1rem;
+  height: 5.1rem;
   background-color: #000002;
-  margin: -56px 28px;
+  margin: -5.6rem 2.8rem;
 }
+
+/* HISTORY START */
 
 .history {
   margin: 0 auto;
   background: url(../img/history.jpg) center bottom no-repeat;
   background-size: cover;
-  width: 750px;
+  max-width: 75rem;
 }
 
 .history-title {
-  font-size: 50.49px;
+  font-size: 5.5rem;
   color: rgb(91, 92, 90);
   text-transform: uppercase;
-  letter-spacing: 6px;
+  letter-spacing: 0.6rem;
   line-height: 1.174;
   text-align: center;
-  padding-bottom: 35px;
+  padding-bottom: 3.5rem;
 }
 
 .history-text {
-  font-size: 15px;
+  font-size: 1.5rem;
   font-family: 'Open Sans';
-  letter-spacing: 2px;
+  letter-spacing: 0.2rem;
   color: rgb(122, 128, 131);
   line-height: 1.618;
   text-align: center;
   display: inline-block;
   width: 100%;
-  padding-bottom: 100px;
+  padding-bottom: 10rem;
 }
 
 .history-list {
   display: flex;
   text-transform: uppercase;
   color: rgb(122, 128, 131);
-  font-size: 36px;
+  font-size: 2.6rem;
   justify-content: space-between;
-  padding-bottom: 35px;
+  /* padding: 0 0.5rem 0.5rem 3.5rem; */
+  margin-bottom: 2rem;
 }
 
 .history-text-descr {
-  width: 220px;
+  width: 22rem;
   margin: 0 auto;
   text-align: center;
   color: rgb(122, 128, 131);
   font-weight: 700;
-  padding-bottom: 610px;
+  padding-bottom: 61rem;
 }
 
-/*FORM*/
+/*FORM START*/
 
 .contact-section {
-  padding-top: 80px;
-  padding-bottom: 5px;
+  padding-top: 8rem;
+  padding-bottom: 0.5rem;
   background: url(../img/contact.jpg) center;
   background-size: cover;
-  padding-bottom: 500px;
+  padding-bottom: 50rem;
 }
 
 .contact-head {
-  margin-bottom: 32px;
-  width: 500px;
+  margin-bottom: 3.2rem;
+  max-width: 50rem;
   margin: 0 auto;
 }
 
 .contact-title {
-  margin-bottom: 15px;
-  font-size: 50.49px;
+  margin-bottom: 1.5rem;
+  font-size: 5rem;
   color: rgb(67, 67, 67);
   text-transform: uppercase;
-  letter-spacing: 6px;
+  letter-spacing: 0.6rem;
   color: rgb(122, 128, 131);
   line-height: 1.174;
   text-align: left;
@@ -798,12 +803,12 @@ input[type='radio'].visually-hidden {
   left: 51%;
   transform: translate(-50%, -50%);
   height: 1px;
-  width: 500px;
+  max-width: 50rem;
   background-color: black;
 }
 
 .contact-text {
-  font-size: 14px;
+  font-size: 1.4rem;
   font-family: 'Open Sans';
   color: rgb(121, 130, 133);
   line-height: 3.571;
@@ -811,40 +816,40 @@ input[type='radio'].visually-hidden {
 }
 
 .contact-tel {
-  font-size: 14px;
+  font-size: 1.4rem;
   font-family: 'Open Sans';
   color: rgb(121, 130, 133);
   line-height: 3.571;
 }
 
 .contact-us-form {
-  width: 384px;
+  max-width: 38.4rem;
   position: relative;
 }
 
 .contact-us-form:after {
   content: '';
   width: 0px;
-  height: 190px;
+  height: 19rem;
   position: absolute;
   border: 1px solid black;
   top: 0;
-  left: 500px;
+  left: 31rem;
 }
 
 .group {
   position: relative;
-  margin-bottom: 30px;
-  width: 380px;
+  margin-bottom: 3rem;
+  max-width: 38rem;
 }
 
 input {
-  width: 380px;
-  font-size: 16px;
-  padding: 10px;
+  max-width: 38rem;
+  font-size: 1.6rem;
+  padding: 1rem;
   display: block;
   border: none;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 0.1rem solid #ccc;
 }
 
 input:focus {
@@ -854,14 +859,14 @@ input:focus {
 /* LABEL ======================================= */
 
 label {
-   font-size: 14px;
+   font-size: 1.4rem;
    font-family: 'Open Sans';
    color: rgb(121, 130, 133);
    line-height: 1.734;
   position: absolute;
   pointer-events: none;
-  left: 10px;
-  top: 15px;
+  left: 1rem;
+  top: 1rem;
   transition: 0.2s ease all;
   -moz-transition: 0.2s ease all;
   -webkit-transition: 0.2s ease all;
@@ -870,8 +875,8 @@ label {
 /* active state */
 input:focus ~ label,
 input:valid ~ label {
-  top: -15px;
-  font-size: 14px;
+  top: -1.5rem;
+  font-size: 1.4rem;
   color: #5264ae;
 }
 
@@ -879,13 +884,13 @@ input:valid ~ label {
 .bar {
   position: relative;
   display: block;
-  width: 380px;
+  max-width: 38rem;
 }
 
 .bar:before,
 .bar:after {
   content: '';
-  height: 2px;
+  height: 0.2rem;
   width: 0;
   bottom: 0;
   position: absolute;
@@ -911,7 +916,7 @@ input:focus ~ .bar:after {
 
 button {
   display: block;
-  font-size: 20px;
+  font-size: 2rem;
   font-family: 'OpenSans';
   font-weight: bold;
   text-transform: uppercase;
